--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -1,12 +1,12 @@
 .about {
-  background-color: $bg-secondary-color;
+  background-color: #fff5f6;
   padding-top: 125px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-image: url(../images/mob-about-fon.png);
   background-repeat: no-repeat;
-  background-position: 0 90%;
+  background-position: bottom;
   background-size: contain;
 }
 
@@ -33,7 +33,12 @@
     background-image: url(../images/desk-about-fon@2x.png);
   }
 }
-
+.about-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
+}
 .about-label-title {
   font-family: Titan One;
   font-style: normal;
@@ -65,15 +70,14 @@
   margin: 0;
   margin-bottom: 26px;
 }
-
+.about-left-side {
+  width: 100%;
+}
 .about-img {
   margin-bottom: 46px;
 }
-.about-right-side {
-  padding: 0 30px;
-}
 .about-first-paragraph {
-  font-family: inherit;
+  font-family: DM Sans;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -81,19 +85,19 @@
   color: #000000;
 
   margin-bottom: 30px;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 
-.about-second-paragraph,
-.about-third-paragraph {
-  font-family: inherit;
+.about-second-paragraph {
+  font-family: DM Sans;
+  font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.58;
   color: #907e82;
-}
-
-.about-second-paragraph {
-  margin-bottom: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .about-button {
   font-size: 14px;
@@ -109,7 +113,7 @@
   padding-right: 30px;
   min-width: 176px;
   min-height: 44px;
-  padding: 0 7px;
+  padding: 0 37px;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -117,49 +121,4 @@
 .about-button:hover,
 .button:focus {
   cursor: pointer;
-}
-
-@media screen and (min-width: 768px) {
-  .about {
-    background-image: none;
-    padding-top: 130px;
-  }
-  .about-label-title {
-    font-size: 26px;
-    line-height: 1.15;
-  }
-  .about-title {
-    font-size: 48px;
-    line-height: 1.14;
-    letter-spacing: 0.04em;
-    margin-bottom: 0;
-  }
-  .about-flex {
-    display: flex;
-    justify-content: space-between;
-  }
-  .about-left-side {
-    display: inline-block;
-    margin-top: 50px;
-  }
-  .about-right-side {
-    padding: 0;
-    width: 340px;
-
-    & .about-first-paragraph {
-      font-size: 14px;
-      margin-top: 100px;
-    }
-    & .about-second-paragraph {
-      font-size: 14px;
-    }
-
-    & .about-third-paragraph {
-      margin-bottom: 62px;
-      font-size: 14px;
-    }
-    & .about-button {
-      margin-top: 0;
-    }
-  }
 }
